# LeanLink

./: .gitignore  PacletInfo.wl  README.md  build.sh  build.wls  publish_notebooks.wls  run_tests.wls
Assets/: Examples.lean  code.lean
Kernel/: Lean.wl  LeanLink.wl  ProofToLean.wl  Utilities.wl
LeanLink/Assets/: code.lean
LeanLink/Kernel/: Lean.wl  LeanLink.wl  ProofToLean.wl
LeanLink/Tests/: NativeAPI.wlt
Native/: lake-manifest.json  lakefile.lean
Native/.lake/: lakefile.olean  lakefile.olean.trace
Native/.lake/config/[anonymous]/: lakefile.olean  lakefile.olean.trace
Native/app/: Main.lean
Native/lib/: LeanLink.lean
Native/lib/LeanLink/: EnvStore.lean  Examples.lean  WXF.lean
Native/shim/: CMakeLists.txt  leanlink_shim.c  test_full_tactic.c  test_init_only.c  test_lean.c  test_lean_minimal.c  test_lean_proper.c  test_lean_thread.c
Native/shim/.cache/clangd/index/: leanlink_shim.c.0DD9AAB7A714B44E.idx  test_lean_proper.c.58E1CB0C8BBA1D24.idx
Notebook/: LeanLinkIntro.md  LeanLinkIntro.nb  MathlibExamples.md  MathlibExamples.nb
Notebooks/: LeanLinkIntro.md  LeanLinkIntro.nb  MathlibExamples.md  MathlibExamples.nb  TuringMachineSuccessor.md
Tests/: NativeAPI.wlt  SubprocessAPI.wlt  test_lazy_import.wls
